<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_camera"
        app:title="@string/camera"
        >

        <ListPreference
            app:defaultValue="front"
            app:entries="@array/camera_lens"
            app:entryValues="@array/camera_lens_values"
            app:key="camera_lens"
            app:title="@string/camera_lens"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_threshold"
        app:title="@string/thresholds">

        <EditTextPreference
            app:defaultValue="0.7"
            app:key="liveness_threshold"
            app:title="@string/liveness_threshold"
            app:useSimpleSummaryProvider="true"
            />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/liveness_level"
            app:entryValues="@array/liveness_level_values"
            app:key="liveness_level"
            app:title="@string/liveness_level"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_reset"
        app:title="@string/reset">

        <Preference
            app:key="restore_default_settings"
            app:title="@string/restore_default_settings" />

    </PreferenceCategory>

</PreferenceScreen>