<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.faceplugin.faceliveness.ui.FaceView
        android:id="@+id/faceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/btnCloseCamera"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:background="@drawable/bg_chip"
        android:contentDescription="@string/close"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageButton
        android:id="@+id/btnSwitchCamera"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:background="@drawable/bg_chip"
        android:contentDescription="@string/switch_camera"
        android:src="@drawable/ic_cameraswitch" />

    <TextView
        android:id="@+id/txtCameraHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="28dp"
        android:paddingHorizontal="24dp"
        android:text="@string/camera_hint"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</FrameLayout>
